objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Quality_Helper__c</fullName>
        <formula>IF(ISBLANK( Email ), 0, 1)  +
IF(ISBLANK( Phone ), 0, 1) +
IF(ISBLANK( Company ), 0, 1) +
IF(ISBLANK( Title ), 0, 1)  +
IF(ISPICKVAL( Industry , &quot;&quot;), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality Helper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Quality__c</fullName>
        <formula>IMAGE( 

CASE( Lead_Quality_Helper__c , 

1, &quot;/img/samples/stars_100.gif &quot;, 
2, &quot;/img/samples/stars_200.gif&quot;, 
3, &quot;/img/samples/stars_300.gif&quot;, 
4, &quot;/img/samples/stars_400.gif&quot;, 
5, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;0 stars&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>